--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,3 +3,38 @@ stages:
   - test
   - report
   - deploy
+
+.base: # Hidden base job needed by all others
+  image: ruby:2.7.1
+  cache:
+    key: gems_and_packages
+    paths:
+      - apt-cache/
+      - vendor/ruby
+    policy: pull
+  before_script:
+    - gem install bundler --no-document
+    - bundle install --jobs $(nproc) "${FLAGS[@]}"
+
+.base_db:
+  extends: .base
+  services:
+    - postgres:latest
+  variables:
+    POSTGRES_DB: todo_app
+    POSTGRES_USER: todo_user
+    POSTGRES_PASSWOED: ''
+    RAILS_ENV: test
+  before_script:
+    - export APT_CACHE_DIR=`pwd`/apt-cache && mkdir -pv $APT_CACHE_DIR
+    - apt-get update -qq && apt-get -o dir::cache::archives="$APT_CACHE_DIR" install -yqq nodejs
+    - gem install bundler --no-document
+    - bundle install --jobs $(nproc) "${FLAGS[@]}" --path=vendor
+    - bundle exec rake db:setup
+
+build:assets_precompile:
+  extends: .base_db
+  stage: build
+  script:
+    - bundle exec rake assets:precompile
+
