--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,4 +25,4 @@ todo_deploy:
     - docker pull jayjoshua/todo_app:latest
     - docker stop todo || true
     - docker rm todo || true
-    - docker run --name todo -d -p 8080:3000 jayjoshua/todo_app:latest 
+    - docker run --name todo --restart always -d -p 8080:3000 jayjoshua/todo_app:latest
